# PATTY

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
lib/: Utility.py  step0_check_data.py  step1_BULKscanSig.py  step1_SCscanSig.py  stepFinal_summary.py
lib/PATTYpipe/: Utility.py  __main__.py  step0_check_data.py  step1_BULKscanSig.py  step1_SCscanSig.py
lib/PATTYpipe/refdata/: H3K27me3_LR_CnTATAC_model.joblib
lib/refdata/: H3K27ac_LR_CnTATAC_model.joblib  H3K9me3_LR_CnTATAC_model.joblib
