[metadata]
name = PATTY
version = 1.0.0
description = PATTY: bias correction for CUT&Tag (bulk & single-cell)
author = Shengen Shawn Hu
author_email = sh8tv@virginia.edu
license = Artistic License
url = https://github.com/your/repo
classifiers =
    Environment :: Console
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7,<3.8
packages = find:
package_dir =
    = lib
include_package_data = True
zip_safe = False

[options.packages.find]
where = lib

[options.entry_points]
console_scripts =
    PATTY = PATTYpipe.cli:main

[options.package_data]
PATTYpipe =
    external_script/bedtools_linux
    external_script/bedtools_mac
    external_script/bedGraphToBigWig_linux
    external_script/bedGraphToBigWig_mac
    refdata/H3K27ac_LR_CnTATAC_model.joblib
    refdata/H3K27me3_LR_CnTATAC_model.joblib
    refdata/H3K9me3_LR_CnTATAC_model.joblib

